// Copyright Â© 2019 Binance
//
// This file is part of Binance. The full Binance copyright notice, including
// terms governing use, modification, and redistribution, is contained in the
// file LICENSE at the root of the source code distribution tree.

syntax = "proto3";
package binance.tsslib.eddsa.keygen;
option go_package = "eddsa/keygen";

/*
 * Represents a BROADCAST message sent during Round 1 of the EDDSA TSS keygen protocol.
 */
message KGRound1Message {
    bytes commitment = 1;
}

/*
 * Represents a P2P message sent to each party during Round 2 of the EDDSA TSS keygen protocol.
 */
message KGRound2Message1 {
    bytes share = 1;
}

/*
 * Represents a BROADCAST message sent to each party during Round 2 of the EDDSA TSS keygen protocol.
 */
message KGRound2Message2 {
    repeated bytes de_commitment = 1;
    bytes proof_alpha_x = 2;
    bytes proof_alpha_y = 3;
    bytes proof_t = 4;
}
